# weather_api_example

./: Dockerfile  dev.env  main.py  mypy.ini  pyproject.toml  test.env
alembic/: README  alembic.ini  env.py
alembic/versions/: 222c78fa18ab_add_weather_tables.py  3372461b8024_populate_weather_table_with_csv_data.py  68980d3d9078_populate_agg_weather_table.py
app/: __init__.py
asgi_middlewares/: request_id_middleware.py
core/: base_context.py  base_controller.py  base_db_model.py  base_filter.py  base_schemas.py  config.py  generic_schemes.py  logger.py  pagination_options.py  tracing_info.py  user.py  utils.py
core/exceptions/: __init__.py  conflict.py  not_found.py
db/: session.py
dependencies/: __init__.py  request_context.py  request_db_session.py  request_logger.py  request_pagination.py  request_user.py  tracing_info.py
scripts/: format-imports.sh  format.sh  lint.sh  run_test.sh
tests/: conftest.py
tests/weather/: test_controller.py
tests/weather_stats/: test_controller.py
weather/: context.py  controller.py  model.py  routes.py  schemas.py
weather_report/: context.py  controller.py  model.py  routes.py  schemas.py
